--- a/독서지도/books.html
+++ b/독서지도/books.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>books</title>
-</head>
-<body>
-    추천도서
     
+    <style>
+        ul{
+            color:#800000;
+            font-family: 휴먼굵은샘체;
+            font-size: 30px;
+        }
+        
+        h2{
+            color:#800000;
+            font-family: 휴먼굵은샘체;
+            font-size: 50px;
+        }
+
+    </style>
+</head>
+<body bgcolor="#ffffe0">
+    <h2>추천도서</h2>
+    <ul>
+        <li>유아</li>
+            <img src="HTML_독서지도이미지/1.jpg" width="100" height="150" border="1" hspace="20">
+            <img src="HTML_독서지도이미지/2.jpg" width="100" height="150" border="1" hspace="20">
+            <img src="HTML_독서지도이미지/3.jpg" width="100" height="150" border="1" hspace="20">
+            <p></p>
+        <li>초등</li>
+        <img src="HTML_독서지도이미지/4.jpg" width="100" height="150" border="1" hspace="20">
+        <img src="HTML_독서지도이미지/5.jpg" width="100" height="150" border="1" hspace="20">
+        <img src="HTML_독서지도이미지/6.jpg" width="100" height="150" border="1" hspace="20">
+        <p></p>
+        <li>중등,고등</li>
+        <img src="HTML_독서지도이미지/7.jpg" width="100" height="150" border="1" hspace="20">
+        <img src="HTML_독서지도이미지/8.jpg" width="100" height="150" border="1" hspace="20">
+        <img src="HTML_독서지도이미지/9.jpg" width="100" height="150" border="1" hspace="20">
+        <p></p>
+        <li>전문서</li>
+        <img src="HTML_독서지도이미지/10.jpg" width="100" height="150" border="1" hspace="20">
+        <img src="HTML_독서지도이미지/11.jpg" width="100" height="150" border="1" hspace="20">
+        <img src="HTML_독서지도이미지/12.jpg" width="100" height="150" border="1" hspace="20">
+        <p></p>
+    </ul>    
 </body>
 </html>
