--- a/독서지도/index.html
+++ b/독서지도/index.html
@@ -9,12 +9,10 @@
 
         <frameset cols="20%,80%">
             <frame src="menu.html"></frame>
-            <frame src="" name="right"></frame>
+            <frame src="notice.html" name="right"></frame>
         </frameset>
 
-        <frame src=""></frame>
-        
-        <frame src=""></frame>
+        <frame src="bottom.html"></frame>
 
     </framset>
 </head>
