--- a/독서지도/menu.html
+++ b/독서지도/menu.html
@@ -10,7 +10,7 @@
         }
     </style>
 </head>
-<body bgcolor="#fffafa">
+<body bgcolor="#ffffe0">
     <ul>
     <li><a href="books.html" target="right"><h2>추천도서</h2></a></li>
     <li><a href="guide.html" target="right"><h2>독서지도법</h2></a></li>
