--- a/독서지도/guide.html
+++ b/독서지도/guide.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>가이드</title>
+    <title>독서지도법</title>
+    <style>
+        dl{
+            color:#800000;
+            font-family: 휴먼굵은샘체;
+            font-size: 30px;
+        }
+    </style>
 </head>
-<body>
-    독서지도법
+<body bgcolor="#ffffe0">
+    <dl>
+        <dt><img src="HTML_독서지도이미지/13.jpg"></dt>
+        <dd>0-2세 영유아 시기에는 자장가 노래와 명언을 들려주고....</dd><p></p>
+
+        <dt><img src="HTML_독서지도이미지/14.jpg"></dt>
+        <dd>단편 동화나 환상 동화를 봄으로써 흥미를 갖고 보고한다.</dd><p></p>
+
+        <dt><img src="HTML_독서지도이미지/15.jpg"></dt>
+        <dd>중등 시기는 교과서와 관련된 책을 선정해주는 것이 좋으며...</dd><p></p>
+
+
+    </dl>
     
 </body>
 </html>
